Major refactor, addition of user accounts and token authentication
